--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,7 +14,9 @@ body {
 .contenitorePaginaHomePage {
   display: flex;
   flex-direction: row;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+
 }
 
 @media only screen and (max-width: 767px) {
@@ -23,6 +25,22 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 
+}
+
+.page {
+  margin-left: 21%;
+  max-width: calc(100% - 21%);
+}
+
+.content-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .geographical-question {
+    width: 80%;
+  }
 }
