--- a/frontend/src/pages/CountrySelector.css
+++ b/frontend/src/pages/CountrySelector.css
@@ -82,7 +82,6 @@ textarea::-webkit-scrollbar-thumb:hover {
   width: 100%;
   flex-wrap: wrap;
   font-family: "Questrial", sans-serif;
-  margin-top: 10px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Added shadow for depth */
 }
 
@@ -321,16 +320,22 @@ h2.modal-header {
   cursor: not-allowed;
 }
 
-.reset-button {
+.btn-primary {
   background-color: var(--primary-color);
   color: white;
-  margin-top:10px;
   padding: 10px 20px;
   border: none;
   border-radius: 8px;
   cursor: pointer;
   transition: background-color 0.3s;
   font-size: 16px;
+}
+
+.btn-primary:hover {
+  background-color: #f0f0f0;
+  color: #00979B;
+  -webkit-box-shadow: 2px 2px 14px -1px rgba(0, 0, 0, 0.56);
+
 }
 
 
