--- a/frontend/src/pages/CommunityInspector.css
+++ b/frontend/src/pages/CommunityInspector.css
@@ -18,7 +18,17 @@
     position: absolute;
     z-index: 10;
     top: 30px;
-    left: 310px;
+    left: 25%;
+}
+
+.metrics-button {
+    left: 58%;
+    cursor: pointer;
+}
+
+.smells-button{
+    left: 90%;
+    cursor: pointer;
 }
 
 .form-request {
@@ -32,7 +42,7 @@
 
     input {
         border-radius: 5px;
-        width: 300px;
+        width: 400px;
         height: 40px;
         padding-inline: 5px;
         font-size: large;
@@ -65,6 +75,8 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    max-width: 440px;
+    
 }
 
 .vertical-buttons {
@@ -122,4 +134,40 @@
             fill: #00979B;
         }
     }
+}
+
+.overlay {
+    position: absolute;
+    top: 150px;
+    left: 25%;
+    width: 70%;
+    background: rgba(255, 255, 255, 0.8);
+    border: 1px solid #ccc;
+    padding: 20px;
+    max-height: 60vh;
+    overflow-y: auto;
+    z-index: 1000;
+    border-radius: 8px;
+}
+
+.transparent-table {
+  width: 100%;
+  border-collapse: collapse;
+  background: transparent;
+}
+
+.transparent-table th,
+.transparent-table td {
+  border: 1px solid #999;
+  padding: 8px;
+  text-align: left;
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.author-button {
+    top: unset;
+    bottom: 40px;
+    left: 54%;
+    background-color: #f0f0f0;
+    color: #00979B;
 }
