CR_2: Aggiunta di una GUI per utilizzare TOAD all’interno di GUIDO
Avanzamento integrazione con BE

--- a/frontend/src/pages/CommunityInspector.css
+++ b/frontend/src/pages/CommunityInspector.css
@@ -22,7 +22,12 @@
 }
 
 .metrics-button {
-    left: 58%;
+    left: 50%;
+    cursor: pointer;
+}
+
+.members-button {
+    left: 70%;
     cursor: pointer;
 }
 
