--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,3 +49,8 @@ body {
 h2 {
   color: var(--primary-color) !important; 
 }
+
+.chatbot-page {
+  margin-left: 20% !important;
+  padding-bottom: 0 !important;
+}
