CR_2: Aggiunta di una GUI per utilizzare TOAD all’interno di GUIDO
Avanzamento integrazione BE-FE

--- a/frontend/src/pages/CommunityInspector.css
+++ b/frontend/src/pages/CommunityInspector.css
@@ -116,8 +116,8 @@
         padding: 30px;
         text-decoration: none;
         color: black;
-        height: 300px;
-        width: 300;
+        height: 400px;
+        width: 400px;
         justify-content: center;
         align-items: center;
         font-size: medium;
