--- a/frontend/src/pages/CountrySelector.css
+++ b/frontend/src/pages/CountrySelector.css
@@ -31,6 +31,8 @@
   width: 85%;
   background-color: white;
   height: 100vh;
+  max-width: calc(85%);
+  max-height: calc(100%);
 }
 
 .expand_page {
